cluster/app/opencti/opencti-connector-alienvault.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencti-connector-alienvault
  namespace: opencti
  labels:
   app: opencti-connector-alienvault
   azure.workload.identity/use: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
     app: opencti-connector-alienvault
  strategy: {}
  template:
    metadata:
      labels:
       app: opencti-connector-alienvault
    spec:
      serviceAccountName: opencti-sa
      containers:
        - env:
            - name: CONNECTOR_CONFIDENCE_LEVEL
              value: "15"
            - name: CONNECTOR_ID
              valueFrom:
                secretKeyRef:
                  name: opencti-secret
                  key: alienvault-connector-id
            - name: CONNECTOR_UPDATE_EXISTING_DATA
              value: "false"
            - name: CONNECTOR_LOG_LEVEL
              value: "info"
            - name: ALIENVAULT_BASE_URL
              value: "https://otx.alienvault.com"    
            - name: ALIENVAULT_API_KEY
              valueFrom:
                secretKeyRef:
                  name: opencti-secret
                  key: alienvault-api-key
            - name: ALIENVAULT_TLP
              value: "White"   
            - name: ALIENVAULT_CREATE_OBSERVABLES
              value: "true"    
            - name: ALIENVAULT_CREATE_INDICATORS
              value: "true"      
            - name: ALIENVAULT_PULSE_START_TIMESTAMP
              value: "2023-05-01T00:00:00"          
            - name: ALIENVAULT_REPORT_TYPE
              value: "threat-report"
            - name: ALIENVAULT_REPORT_STATUS
              value: "New"
            - name: ALIENVAULT_GUESS_MALWARE
              value: "false"
            - name: ALIENVAULT_GUESS_CVE
              value: "false"
            - name: ALIENVAULT_EXCLUDED_PULSE_INDICATOR_TYPES
              value: FileHash-MD5,FileHash-SHA1
            - name: ALIENVAULT_ENABLE_RELATIONSHIPS
              value: "true"
            - name: ALIENVAULT_ENABLE_ATTACK_PATTERNS_INDICATES
              value: "true"
            - name: ALIENVAULT_INTERVAL_SEC
              value: "1800"
            - name: CONNECTOR_NAME
              value: "AlienVault"
            - name: CONNECTOR_SCOPE
              value: "alienvault"
            - name: CONNECTOR_TYPE
              value: EXTERNAL_IMPORT
            - name: OPENCTI_TOKEN
              valueFrom:
                secretKeyRef:
                  name: opencti-secret
                  key: opencti-token
            - name: OPENCTI_URL
              value: "http://opencti:8080"
          image: opencti/connector-alienvault:5.9.6
          name: connector-alienvault
          resources: 
            limits:
              memory: 512Mi
              cpu: "250m"
            requests:
              memory: 256Mi
              cpu: "100m"
          volumeMounts:
          - name: secrets-store01-inline
            mountPath: "/mnt/secrets-store"
            readOnly: true
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-workload-identity"
      restartPolicy: Always
