cluster/app/opencti/opencti.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: opencti
    azure.workload.identity/use: "true"
  name: opencti
  namespace: opencti
spec:
  replicas: 3
  selector:
    matchLabels:
      app: opencti
  strategy: {}
  template:
    metadata:
      labels:
        app: opencti
    spec:
      serviceAccountName: opencti-sa
      containers:
        - env:
          - name: NODE_OPTIONS
            value: --max-old-space-size=8096
          - name: APP__PORT
            value: "8080"
          - name: APP__BASE_URL
            valueFrom:
              secretKeyRef:
                name: opencti-secret
                key: opencti-base-url
          - name: APP__ADMIN__EMAIL
            valueFrom:
              secretKeyRef:
                name: opencti-secret
                key: opencti-admin-email
          - name: APP__ADMIN__PASSWORD
            valueFrom:
              secretKeyRef:
                name: opencti-secret
                key: opencti-admin-password
          - name: APP__ADMIN__TOKEN
            valueFrom:
              secretKeyRef:
                name: opencti-secret
                key: opencti-token
          - name: APP__APP_LOGS__LOGS_LEVEL
            value: debug
          - name: REDIS__HOSTNAME
            value: redis.opencti-redis
          - name: REDIS__PORT
            value: "6379"
          - name: ELASTICSEARCH__URL
            value: https://elasticsearch-es-http.opencti-elasticsearch:9200
          - name: ELASTICSEARCH__SSL__REJECT_UNAUTHORIZED
            value: "false"
          - name: ELASTICSEARCH__USERNAME
            valueFrom:
              secretKeyRef:
                name: opencti-secret
                key: elasticsearch-user
          - name: ELASTICSEARCH__PASSWORD
            valueFrom:
              secretKeyRef:
                name: opencti-secret
                key: elasticsearch-password
          - name: MINIO__ENDPOINT
            value: minio.opencti-minio
          - name: MINIO__PORT
            value: "9000"
          - name: MINIO__USE_SSL
            value: "false"
          - name: MINIO__ACCESS_KEY
            valueFrom:
              secretKeyRef:
                name: opencti-secret
                key: minio-root-user
          - name: MINIO__SECRET_KEY
            valueFrom:
              secretKeyRef:
                name: opencti-secret
                key: minio-root-password
          - name: RABBITMQ__HOSTNAME
            value: rabbitmq.opencti-rabbitmq
          - name: RABBITMQ__PORT
            value: "5672"
          - name: RABBITMQ__PORT_MANAGEMENT
            value: "15672"
          - name: RABBITMQ__MANAGEMENT_SSL
            value: "false"
          - name: RABBITMQ__USERNAME
            valueFrom:
              secretKeyRef:
                name: opencti-secret
                key: rabbitmq-default-user
          - name: RABBITMQ__PASSWORD
            valueFrom:
              secretKeyRef:
                name: opencti-secret
                key: rabbitmq-default-password
          - name: SMTP__HOSTNAME
            value: "localhost"
          - name: SMTP__PORT
            value: "25"
          - name: PROVIDERS__OPENID__STRATEGY
            value: OpenIDConnectStrategy
          - name: PROVIDERS__OPENID__CONFIG__LABEL
            value: Login with OpenID
          - name: PROVIDERS__OPENID__CONFIG__ISSUER
            valueFrom:
              secretKeyRef:
                name: opencti-secret
                key: opencti-config-issuer
          - name: PROVIDERS__OPENID__CONFIG__CLIENT_ID
            valueFrom:
              secretKeyRef:
                name: opencti-secret
                key: opencti-config-clientid
          - name: PROVIDERS__OPENID__CONFIG__CLIENT_SECRET
            valueFrom:
              secretKeyRef:
                name: opencti-secret
                key: opencti-config-secret
          - name: PROVIDERS__OPENID__CONFIG__REDIRECT_URIS
            valueFrom:
              secretKeyRef:
                name: opencti-secret
                key: opencti-config-redirect-uris
          - name: PROVIDERS__LOCAL__STRATEGY
            value: "LocalStrategy"
          image: opencti/platform:5.9.6
          name: opencti
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 2048Mi
              cpu: "1500m"
            requests:
              memory: 256Mi
              cpu: 1
          volumeMounts:
          - name: secrets-store01-inline
            mountPath: "/mnt/secrets-store"
            readOnly: true
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-workload-identity"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: opencti
  namespace: opencti
  labels:
    app: opencti
spec:
  ports:
    - name: "opencti"
      port: 8080
      targetPort: 8080
  selector:
    app: opencti
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opencti-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opencti
            port:
              number: 8080
