cluster/app/opencti/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: opencti
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opencti
  namespace: opencti
spec:
  egress:
  - ports:
    - port: 8080
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: opencti
  - ports:
    - port: 9200
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          eck.k8s.elastic.co/tenant: opencti-elasticsearch
      podSelector:
        matchLabels:
          common.k8s.elastic.co/type: elasticsearch
  - ports:
    - port: 6379
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: redis
  - ports:
    - port: 9000
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: minio
  - ports:
    - port: 5672
      protocol: TCP
    - port: 15672
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: rabbitmq
          app.kubernetes.io/component: rabbitmq
  - ports:
    - port: 53
      protocol: UDP
      to:
      - podSelector:
          matchLabels:
            k8s-app: kube-dns
  - ports:
    - port: 443
      protocol: TCP
      to:
      - ipBlock:
          cidr: "0.0.0.0/0" # Allow egress out of the cluster
          except: # Deny egress to pods inside the Kubernetes private network
            - "10.0.0.0/8"
            - "172.16.0.0/12"
            - "192.168.0.0/16"
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: nginx-ingress
    - namespaceSelector:
        matchLabels:
          name: opencti
    - namespaceSelector:
        matchLabels:
          name: nginx-ingress
    ports:
    - port: 8080
      protocol: TCP
